# 3d-printing-with-moveo

./: .gitignore  .gitmodules  README.md  populate_block_joint.cpp  stepper_current_block.txt
CAD/arduino-mega-2560--1.snapshot.8/: ArduinoMega.SLDPRT
CAD/e3d-all-metal-hotend-v6-1.snapshot.2/: Ceramic Cartridge Heater.sldprt  E3D All Metal Hotend V6 assy.SLDASM  E3D All Metal Hotend V6 assy.STEP  E3D All Metal Hotend V6 assy.X_T  E3D v6 HotEnd - Heat Block.sldprt  E3D v6 HotEnd - Heatbreak.sldprt  E3D v6 HotEnd - Heatsink.sldprt  E3D v6 HotEnd - Nozzle(蹬怮椔).sldprt  E3D-v6 Fan Duct.sldprt  Fan-30x30x10-Promoco(Fan-KDE0503PFB3-Promoco).sldprt  Fan-DC-KDE0503PFB3-Promoco.sldasm  Fan-House-30x30x10-Promoco(Fan-House-KDE0503PFB3-Promoco).sldprt  Flat Washers(PWF3).sldprt  HEXAGON SOCKET HEAD CAP SCREWS(SCB3-10).sldprt  HEXAGON SOCKET HEAD CAP SCREWS(SCB3-4).sldprt  Self Tapping Screws - Pan Head(CSPTRSA-SUS-TP3-16).sldprt  Thermistor.sldprt
CAD/e3d-titan-extruder-2.snapshot.2/: 5M1.SLDPRT  9x5x3mm bearing.ipt  Base.ipt  Ceramic Cartridge Heater.sldprt  E3D v6 HotEnd - Heat Block.sldprt  E3D v6 HotEnd - Heatbreak.sldprt  E3D v6 HotEnd - Heatsink.sldprt  E3D v6 HotEnd - Nozzle(蹬怮椔).sldprt  E3D-v6 Fan Duct.sldprt  Fan-30x30x10-Promoco(Fan-KDE0503PFB3-Promoco).sldprt  Fan-House-30x30x10-Promoco(Fan-House-KDE0503PFB3-Promoco).sldprt  Flat Washers(PWF3).sldprt  HEXAGON SOCKET HEAD CAP SCREWS(SCB3-10).sldprt  HEXAGON SOCKET HEAD CAP SCREWS(SCB3-4).sldprt  M3 nut.ipt  Self Tapping Screws - Pan Head(CSPTRSA-SUS-TP3-16).sldprt  Thermistor.sldprt  cover.ipt  e3d titan.SLDASM  e3d titan.iam  e3d titan.stp  extruder housing.SLDPRT  filament gear.ipt  guide tube.ipt  hobbed wheel.ipt  idler bearing pin.ipt  idler bearing.ipt  idler spring.ipt  m3x8.ipt  motor gear.ipt  tensioner.ipt
CAD/leadshine-driver-dm556-s-dm542-s-sm570-s-dm870-s-3dm580-s-1.snapshot.9/: 1.SLDASM  CONNECTOR_3_81MM 6PIN_MALE.sldprt  CONNECTOR_5MM 4PIN_MALE.sldprt  CONNECTOR_5MMCLOSED 2PIN_MALE.sldprt  DIP_SWITCH_8PIN_VIC2.sldprt  DM556S.SLDASM  DM556S.SLDDRW  (+6 more)
Cura/: autoInstall.bash
Marlin/: .clang-format  Conditionals_post.h  Configuration.h  Configuration_adv.h  Marlin.h  Marlin_main.cpp  cardreader.cpp  cardreader.h  configuration_store.cpp  endstops.cpp  endstops.h  enum.h  language.h  language_en.h  macros.h  parser.h  pins_RAMPS.h  planner.cpp  planner.h  stepper.cpp  stepper.h  stepper_indirection.h  ultralcd.cpp  utility.cpp  utility.h
circuit/: uStepper.PcbDoc
gcode_translation/: CMakeLists.txt  package.xml
gcode_translation/gcode/: .save_gcode_file  new 15mm test.gcode  split_register.gcode
gcode_translation/gcode/New_Joint_XYZ/: Joint_XYZ.gcode  Joint_XYZ_5to4.gcode
gcode_translation/gcode/old/: split 15mm test.gcode
gcode_translation/gcode/test/gcode/: new Matrix_0x0.gcode  new Matrix_0x135.gcode  new Matrix_0x180.gcode  new Matrix_0x45.gcode  new Matrix_0x90.gcode  new Matrix_135x0.gcode  new Matrix_135x135.gcode  new Matrix_135x180.gcode  new Matrix_135x45.gcode  new Matrix_135x90.gcode  new Matrix_180x0.gcode  new Matrix_180x135.gcode  new Matrix_180x180.gcode  new Matrix_180x45.gcode  new Matrix_180x90.gcode  new Matrix_45x0.gcode  new Matrix_45x135.gcode  new Matrix_45x180.gcode  new Matrix_45x45.gcode  new Matrix_45x90.gcode  new Matrix_90x0.gcode  new Matrix_90x135.gcode  new Matrix_90x180.gcode  new Matrix_90x45.gcode  new Matrix_90x90.gcode
gcode_translation/gcode/test/old/: new 15mm test.gcode  z test.gcode
gcode_translation/gcode/test/ori_gcode/: Matrix_0x0.gcode  Matrix_0x135.gcode  Matrix_0x180.gcode  Matrix_0x45.gcode  Matrix_0x90.gcode  Matrix_135x0.gcode  Matrix_135x135.gcode  Matrix_135x180.gcode  Matrix_135x45.gcode  Matrix_135x90.gcode  Matrix_180x0.gcode  Matrix_180x135.gcode  Matrix_180x180.gcode  Matrix_180x45.gcode  Matrix_180x90.gcode  Matrix_45x0.gcode  Matrix_45x135.gcode  Matrix_45x180.gcode  Matrix_45x45.gcode  Matrix_45x90.gcode  Matrix_90x0.gcode  Matrix_90x135.gcode  Matrix_90x180.gcode  Matrix_90x45.gcode  Matrix_90x90.gcode
gcode_translation/include/Joint_division/: Joint_division.csv  joint_division.hpp
gcode_translation/include/Mesh/: Mesh.h  Mesh.txt  Mesh_include.c  circle_new.h
gcode_translation/include/Mesh/circle/: circle_Mesh.txt
gcode_translation/launch/: gcode_translation.launch  inverse_kinematics.launch  inverse_kinematics_origin.launch  inverse_kinematics_test.launch  split.launch  test_inverse_kinematics.launch
gcode_translation/src/: 15mm test.gcode  15mm test_new.gcode  75mm test.gcode  75mm test_new.gcode  gcode_point_split.cpp  inverse_kinematics.cpp  inverse_kinematics_origin.cpp  inverse_kinematics_test.cpp  read_file.cpp  test_inverse_kinematics.cpp
moveo_moveit/: CMakeLists.txt  package.xml
moveo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
moveo_moveit_move_group/: CMakeLists.txt  package.xml
moveo_moveit_move_group/area/: .~lock.area4.csv#  .~lock.closest_area1.csv#  area.csv
moveo_moveit_move_group/launch/: area_test.launch  area_test_outermost.launch  area_test_p_n.launch  ik_test.launch  moveo_set_pose.launch  parallel_ik_test.launch  set_joint.launch  set_pose.launch
moveo_moveit_move_group/src/: 15mm test.gcode  area_test.cpp  area_test_outermost.cpp  area_test_p_n.cpp  ik_test.cpp  moveo_ik_test.cpp  moveo_set_pose.cpp  parallel_ik_test.cpp  set_joint.cpp  set_pose.cpp
moveo_urdf/: package.xml
moveo_urdf/config/: joint_names_moveo_urdf.yaml
moveo_urdf/launch/: display.launch  gazebo.launch
moveo_urdf/meshes/: base_link.STL  end_effector_link.STL  moveo_gripper_link1.STL  moveo_gripper_link2.STL  moveo_gripper_link3.STL  moveo_gripper_link4.STL  moveo_gripper_link5.STL  moveo_gripper_link6.STL  moveo_link1.STL  moveo_link2.STL  moveo_link3.STL  moveo_link4.STL  moveo_link5.STL  moveo_nozzle_link.STL
moveo_urdf/urdf/: moveo_urdf.csv  moveo_urdf.urdf  moveo_urdf1.urdf  moveo_urdf2.urdf
progressbar/: CMakeLists.txt  package.xml
simulation/: CMakeLists.txt  package.xml
simulation/launch/: simulation.launch
simulation/src/: simulation.cpp
virtual_shift/: CMakeLists.txt  package.xml
(+1904 files in other folders)
