<package format="2">
  <name>moveo_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for moveo_urdf</p>
    <p>This package contains configuration data, 3D models and launch files
for moveo_urdf robot</p>
  </description>
  <author email="t106360231@ntut.org.tw">Szu-Chi Huang</author>
  <maintainer email="t106360212@ntut.org.tw">Ji-Fu Tiao</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>